[project]
name = "ai-marketing-claude"
version = "1.0.0"
description = "AI Marketing Suite — Claude Code Skills"
requires-python = ">=3.8"

[tool.ruff]
# Ruff linter configuration (fast Python linter, drop-in replacement for flake8/pylint)
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "S",    # flake8-bandit (security)
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "S310",   # Allow urllib usage (audit url open for permitted schemes)
    "S603",   # Allow subprocess calls (scripts are CLI tools)
    "E501",   # Line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["S113"]  # Allow missing timeout (already set in code)
"scripts/generate_pdf_report.py" = ["F401"]  # Unused imports in try/except block are for availability checking
